=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================

** CHANGES ALONG siesta-3.0 branch

------------------------------------------------------------------------
2010-11-30  08:40:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-7
Avoid use of generics in declarations in FoX format routine

The use of generic functions in declaration statements was confusing
the Fortran compiler (version >= 11). They have been replaced by calls
to the specific versions.

modified:
  Src/FoX/fsys/fox_m_fsys_format.F90

------------------------------------------------------------------------
2010-11-25  15:30:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-6
Fix setting of applied electric field in parallel

Due to a programming error, the user-specified electric
field was not correctly set in non-master nodes.

Thanks to Alexander Voznyy for the bug report.

modified:
  Src/m_efield.F

------------------------------------------------------------------------
2010-11-23  09:45:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-5
Modify bonds routine to print real locations of neighbors

In routine bonds (called at the beginning and at the end of the
program) we now print the real location of the neighbor atom in space,
and not, as in earlier versions, the location of the equivalent
representative in the unit cell.

modified:
  Src/bonds.f
  Docs/siesta.tex

------------------------------------------------------------------------
2010-11-12  14:55:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-4
Cosmetic fixes in Gen-basis/{ioncat,ionplot.sh}

modified:
  Util/Gen-basis/ioncat.f
  Util/Gen-basis/ionplot.sh

------------------------------------------------------------------------
2010-11-12  14:50:00 GMT Alberto Garcia <albertog@icmab.es>  3.0-rc2-3
Fix test in m_getopts

A double if test gives problems with some compilers when