@@ -15,6 +15,7 @@
 
       implicit none
 
+      character(len=24), save, public          :: accum
       private
       public :: find_kgrid
 
@@ -183,6 +184,8 @@ C (if possible) after reflection on each alternative plane
           elseif (abs(dkg(j)-0.5d0) .lt. tiny) then
             ni = (ng(j)-1)/2 + 1
           endif
+          ! To work around an Intel_12 compiler bug
+          write(accum,"(3i8)") ni,nktot,kdsc(j,j)
           nkr(j) = ni * nktot / kdsc(j,j)
         enddo
 
