@@ -51,6 +51,8 @@ C
 c ----------------------------------------------------------------------
 
 c Internal variables
+      character(len=24), save        :: accum
+
       integer           i, i1, i2, i3, igmax(3), igmin(3), iu,
      .                  ir, ik, ix, j,
      .                  kdsc(3,3), maux(3,3,2), ml(3,3), mr(3,3),
@@ -139,6 +141,8 @@ C       If spin-spiral, use all k points
           elseif (abs(dkg(j)-0.5d0) .lt. tiny) then
             ni = (ng(j)-1)/2 + 1
           endif
+          ! To work around an Intel_12 compiler bug
+          write(accum,"(3i8)") ni,nktot,kdsc(j,j)
           nkr(j) = ni * nktot / kdsc(j,j)
         enddo
 
